--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>DevConnector: A social network for developers</title>
+    <title>A discussion forum for students and teachers</title>
   </head>
 
   <body>
